--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,19 @@
 = BugHerd for Redmine
 
+== What's this for?
+
+BugHerd is the world's simplest bug tracker for websites. Because it's totally cool and plays well with other cool applications, it integrates nicely with Redmine but requires this plugin to be installed.
+
+If you have been asked to install this by your colleague, you may not have seen BugHerd yet and might want to check it out: http://www.bugherd.com
+
+== What does it do?
+
+This plugin enables new APIs for use by BugHerd's server to update issues, and has the ability to call BugHerd back when an issue changes.
+
+== Is it secure?
+
+Yes, for those of you that know Rails: all new APIs that are exposed through new routes that this application adds to your Redmine instance require that an administrator's API key is passed in.
+
 == Installation
 
 To (re)install the BugHerd Redmine plugin, go to the base directory of your Redmine instance on your server:
@@ -14,19 +28,19 @@ Reload your Redmine instance. If you use Passenger:
 
 Enable APIs:
 
-1. Go to **Administration > Settings**
-2. Open the **Authentication** tab
-3. Tick **Enable REST web service**
-4. Click **Save**
+1. Go to: Administration > Settings
+2. Open the "Authentication" tab
+3. Tick "Enable REST web service"
+4. Click Save
 
 Create a Project Custom Field called "BugHerd Project Key":
 
-1. Go to **Administration > Custom Fields**
-2. Open the **Projects** tab
-3. Select **New custom field**
+1. Go to Administration > Custom Fields
+2. Open the "Projects" tab
+3. Select "New custom field"
 4. Complete these fields:
-   - Name: BugHerd Project Key
-   - *Untick* **Visible** (to ensure the value is not seen by anyone but the project managers)
-5. Click **Save**
+   - Name: _BugHerd Project Key_
+   - *Untick* "Visible" (to ensure the value is not seen by anyone but the project managers)
+5. Click Save
 
 Your Redmine instance is now ready to be integrated with BugHerd.
