--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,18 @@
 = BugHerd for Redmine
 
-== What's this for?
+== Introduction
+
+=== What's this?
 
 BugHerd is the world's simplest bug tracker for websites. Because it's totally cool and plays well with other cool applications, it integrates with Redmine but requires this plugin to be installed.
 
 If you have been asked to install this by your colleague, you may not have seen BugHerd yet and might want to check it out: http://www.bugherd.com
 
-== What does it do?
+=== What does it do?
 
 This plugin enables new APIs for use by BugHerd's server to update issues, and has the ability to call BugHerd back when an issue changes.
 
-== Is it secure?
+=== Is it secure?
 
 Yes, all APIs defined by this plug-in that enable information to be passed in and out require that an administrator's API key is used to access them.
 
